--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="//cdn.jsdelivr.net/mojs-player/latest/mojs-player.min.js"></script>
 </head>
 <body>
-    <script type="text/javascript" src="lib/mo.min.js"></script>
+    <script type="text/javascript" src="lib/mo.js"></script>
     <script type="text/javascript" src="util.js"></script>
     <script type="text/javascript" src="kity.js"></script>
     <script type="text/javascript" src="test.js"></script>
