Added testkt2.js for kity2.
- Fixed typo in kitySetTextObjAttr().
- Loaded testkt2.js in index.html.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <script type="text/javascript" src="lib/mo.js"></script>
     <script type="text/javascript" src="util.js"></script>
     <script type="text/javascript" src="kity.js"></script>
-    <script type="text/javascript" src="test.js"></script>
+    <script type="text/javascript" src="kity2.js"></script>
+    <!-- test for kity1 -->
+    <!--<script type="text/javascript" src="test.js"></script>-->
+    <!-- test for kity2 -->
+    <script type="text/javascript" src="testkt2.js"></script>
     <div id='parent'></div>
 </body>
 </html>
