--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
 <body>
     <script type="text/javascript" src="lib/mo.js"></script>
     <script type="text/javascript" src="util.js"></script>
-    <script type="text/javascript" src="kity.js"></script>
-    <script type="text/javascript" src="kity2.js"></script>
+
     <!-- test for kity1 -->
-    <!--<script type="text/javascript" src="test.js"></script>-->
+    <!--<script type="text/javascript" src="kity.js"></script>
+    <script type="text/javascript" src="test.js"></script>-->
+
     <!-- test for kity2 -->
+    <!--
+    <script type="text/javascript" src="kity2.js"></script>
     <script type="text/javascript" src="testkt2.js"></script>
+    -->
+
+    <!-- test for kity3 -->
+    <script type="text/javascript" src="kity3/container.js"></script>
+    <script type="text/javascript" src="kity3/animation.js"></script>
+    <script type="text/javascript" src="kity3/player.js"></script>
+    <script type="text/javascript" src="kity3/kity3.js"></script>
+    <script type="text/javascript" src="testkt3.js"></script>
     <div id='parent'></div>
 </body>
 </html>
