Added Text module.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     -->
 
     <!-- test for kity3 -->
+    <script type="text/javascript" src="kity3/text.js"></script>
     <script type="text/javascript" src="kity3/container.js"></script>
     <script type="text/javascript" src="kity3/animationSpec.js"></script>
     <script type="text/javascript" src="kity3/player.js"></script>
