Added test code for comparing kity2 and kity3.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <script type="text/javascript" src="kity3/player.js"></script>
     <script type="text/javascript" src="kity3/kity3.js"></script>
     <!--<script type="text/javascript" src="testkt3.js"></script>-->
-    <script type="text/javascript" src="testkt4.js"></script>
+    <!--<script type="text/javascript" src="testkt4.js"></script>-->
+    <script type="text/javascript" src="sample.js"></script>
     <div id='parent'></div>
 </body>
 </html>
