--- a/index.html
+++ b/index.html
@@ -24,7 +24,29 @@
     <script type="text/javascript" src="kity3/kity3.js"></script>
     <!--<script type="text/javascript" src="testkt3.js"></script>-->
     <!--<script type="text/javascript" src="testkt4.js"></script>-->
-    <script type="text/javascript" src="sample.js"></script>
-    <div id='parent'></div>
+    <!--<script type="text/javascript" src="sample.js"></script>-->
+    <script type="text/javascript" src="demo.js"></script>
+    <h1>Kity3</h1>
+    <div id="control" style="padding:5px;">
+        <div style="padding-bottom: 5px;">
+            <button onclick="play()">play</button>
+            <select id="sampleList" onchange="onSampleSelected()"></select>
+        </div>
+        <div style="width:100%; background-color:#ffff80;">
+            <div id="description" style="padding:5px;">
+            </div>
+        </div>
+        <div style="padding-top:5px;">
+            <textarea
+                name="source"
+                id="source_area"
+                style="width:100%;height:250px;line-height:150%;font-size:12px"
+                spellcheck="false"></textarea>
+        </div>
+    </div>
+    <div id="demo" style="padding: 5px;">
+        <div id="parent" style='border: 1px solid; width: 100%; height: 300px;'></div>
+    </div>
+    
 </body>
 </html>
