Added temp codes.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <!--<script type="text/javascript" src="testkt3.js"></script>-->
     <!--<script type="text/javascript" src="testkt4.js"></script>-->
     <!--<script type="text/javascript" src="sample.js"></script>-->
-    <script type="text/javascript" src="demo.js"></script>
+    <!--<script type="text/javascript" src="demo.js"></script>-->
+    <script type="text/javascript" src="keyframetest.js"></script>
     <h1>Kity3</h1>
     <div id="control" style="padding:5px;">
         <div style="padding-bottom: 5px;">
